--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,7 @@
       rel="stylesheet"
     />
 
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="DeveloperFolio" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
